@@ -32,22 +32,22 @@ class CartServiceTest {
         products = new ArrayList<>();
 
         var product1 = ProductEntity.builder()
-                .name("きらめきリボンブレスレット")
-                .price(200)
-                .description("大きなリボンがついたブレスレット。特別な日にぴったりのアクセ。")
-                .imageUrl("http://image1.jpg")
+                .name("きらきらお星様チャーム")
+                .price(125)
+                .description("きらきら輝くお星様のチャーム☆ カバンやポーチにつければ、毎日がちょっぴり特別に♪")
+                .imageUrl("/images/product-1.png")
                 .build();
         var product2 = ProductEntity.builder()
-                .name("ふわもこユニコーンポーチ")
-                .price(550)
-                .description("ふわふわ手触りのユニコーン型ポーチ。小物をかわいく収納。")
-                .imageUrl("http://image2.jpg")
+                .name("虹のゆめかわヘアクリップ")
+                .price(210)
+                .description("パステルカラーの虹がきらっと光る、ゆめかわいいヘアクリップ。つけるだけで毎日がときめく魔法タイムに♪")
+                .imageUrl("/images/product-2.png")
                 .build();
         var product3 = ProductEntity.builder()
-                .name("スイートキャンディボールペン")
-                .price(180)
-                .description("カラフルなキャンディ風デザインのボールペン。友だちに自慢しちゃおう！")
-                .imageUrl("http://image3.jpg")
+                .name("ときめきハートリング")
+                .price(160)
+                .description("つけるたび、ドキドキしちゃう♡ 小さなハートがきらっと光る、乙女心くすぐる指輪。今日はどの指につける？")
+                .imageUrl("/images/product-3.png")
                 .build();
         productRepository.saveAll(List.of(product1, product2, product3));
         products = productRepository.findAll().stream().map(Product::from).toList();
@@ -55,10 +55,10 @@ class CartServiceTest {
 
     @Test
     void addCartCreateTest() {
-        var actual = cartService.addCart(null, products.get(0).getId());
+        var actual = cartService.addCart(null, products.getFirst().getId());
 
         assertThat(actual)
-                .isEqualTo(new Cart(200, List.of(products.get(0))));
+                .isEqualTo(new Cart(125, List.of(products.getFirst())));
     }
 
     @Test
@@ -69,7 +69,7 @@ class CartServiceTest {
 
         assertThat(actual)
                 .isEqualTo(
-                        new Cart(930, List.of(
+                        new Cart(495, List.of(
                                 products.get(0),
                                 products.get(1),
                                 products.get(2))));
@@ -82,6 +82,6 @@ class CartServiceTest {
                 products.get(1))), products.get(0).getId());
 
         assertThat(actual)
-                .isEqualTo(new Cart(550, List.of(products.get(1))));
+                .isEqualTo(new Cart(210, List.of(products.get(1))));
     }
 }
